# bidai

./: .gitignore  .gitlab-ci.yml  .gitmessage  CLAUDE.md
.githooks/: commit-msg
docs/: AI智能投标系统技术方案.md  API_Spec_BidAI_v1.0.md  Sprint_Plan_BidAI_v1.0.md  Tech_Spec_BidAI_v1.0.md  database-design.md
frontend/bid-web/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/bid-web/src/: App.vue  main.ts
infra/db/: README.md  alembic.ini
infra/db/migrations/: V001__init_schema.sql
infra/db/versions/: 9d30203ca4c7_init_schema.py
infra/docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.gitlab.yml  health-check.sh
infra/docker/elasticsearch/: Dockerfile
infra/k8s/: README.md
infra/k8s/base/: 00-namespace.yaml  01-shared-configmap.yaml  02-secrets-template.yaml
infra/k8s/dev/: frontend-web.yaml  java-services.yaml  python-services.yaml
scripts/: deploy-k8s-dev.sh  generate-k8s-secrets.sh
services/java/auth-service/: Dockerfile  README.md  build.gradle
services/java/export-service/: Dockerfile  README.md  build.gradle
services/java/notify-service/: Dockerfile  README.md
services/java/project-service/: Dockerfile  README.md  build.gradle
services/python/bid-parser-service/: README.md  pyproject.toml
services/python/bid-review-service/: README.md  pyproject.toml
services/python/bid-review-service/app/api/v1/: health.py
services/python/bid-review-service/app/core/: config.py
services/python/bid-review-service/app/models/: base.py
services/python/bid-review-service/tests/: conftest.py  test_health.py
services/python/bid-writer-service/: README.md  (+1 more)
tests/api/: conftest.py  pyproject.toml  test_auth_api.py  test_project_api.py
(+175 files in other folders)
